--- a/index.htm
+++ b/index.htm
@@ -6,21 +6,21 @@
     <meta name="viewport" id="metaViewport" content="user-scalable=no, initial-scale=1, width=device-width, viewport-fit=cover" data-tdv-general-scale="0.5"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <script src="lib/tdvplayer.js?v=1680090521354"></script>
-    <link rel="preload" href="locale/en.txt?v=1680090521354" as="fetch" crossorigin="anonymous"/>
-	<link rel="preload" href="script.js?v=1680090521354" as="script"/>
-	<link rel="preload" href="media/panorama_39DA8955_2CBC_7BE0_41AA_23A18E2A138B_0/r/2/0_0.avif?v=1680090521354" as="image"/>
-	<link rel="preload" href="media/panorama_39DA8955_2CBC_7BE0_41AA_23A18E2A138B_0/l/2/0_0.avif?v=1680090521354" as="image"/>
-	<link rel="preload" href="media/panorama_39DA8955_2CBC_7BE0_41AA_23A18E2A138B_0/u/2/0_0.avif?v=1680090521354" as="image"/>
-	<link rel="preload" href="media/panorama_39DA8955_2CBC_7BE0_41AA_23A18E2A138B_0/d/2/0_0.avif?v=1680090521354" as="image"/>
-	<link rel="preload" href="media/panorama_39DA8955_2CBC_7BE0_41AA_23A18E2A138B_0/f/2/0_0.avif?v=1680090521354" as="image"/>
-	<link rel="preload" href="media/panorama_39DA8955_2CBC_7BE0_41AA_23A18E2A138B_0/b/2/0_0.avif?v=1680090521354" as="image"/>
+    <script src="lib/tdvplayer.js?v=1680096827168"></script>
+    <link rel="preload" href="locale/en.txt?v=1680096827168" as="fetch" crossorigin="anonymous"/>
+	<link rel="preload" href="script.js?v=1680096827168" as="script"/>
+	<link rel="preload" href="media/panorama_39DA8955_2CBC_7BE0_41AA_23A18E2A138B_0/r/2/0_0.avif?v=1680096827168" as="image"/>
+	<link rel="preload" href="media/panorama_39DA8955_2CBC_7BE0_41AA_23A18E2A138B_0/l/2/0_0.avif?v=1680096827168" as="image"/>
+	<link rel="preload" href="media/panorama_39DA8955_2CBC_7BE0_41AA_23A18E2A138B_0/u/2/0_0.avif?v=1680096827168" as="image"/>
+	<link rel="preload" href="media/panorama_39DA8955_2CBC_7BE0_41AA_23A18E2A138B_0/d/2/0_0.avif?v=1680096827168" as="image"/>
+	<link rel="preload" href="media/panorama_39DA8955_2CBC_7BE0_41AA_23A18E2A138B_0/f/2/0_0.avif?v=1680096827168" as="image"/>
+	<link rel="preload" href="media/panorama_39DA8955_2CBC_7BE0_41AA_23A18E2A138B_0/b/2/0_0.avif?v=1680096827168" as="image"/>
 	<meta name="description" content="Virtual Tour"/>
 	<meta name="theme-color" content="#FFFFFF"/>
-    <script src="script.js?v=1680090521354"></script>
+    <script src="script.js?v=1680096827168"></script>
     <script type="text/javascript">
         var tour;
-        var devicesUrl = {"general":"script_general.js?v=1680090521354"};
+        var devicesUrl = {"general":"script_general.js?v=1680096827168"};
 
         (function()
         {
@@ -63,9 +63,9 @@
 
             var settings = new TDV.PlayerSettings();
             settings.set(TDV.PlayerSettings.CONTAINER, document.getElementById('viewer'));
-            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1680090521354');
-            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1680090521354');
-            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1680090521354');
+            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1680096827168');
+            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1680096827168');
+            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1680096827168');
 
             tour = new TDV.Tour(settings, devicesUrl);
             tour.bind(TDV.Tour.EVENT_TOUR_INITIALIZED, onVirtualTourInit);
@@ -320,10 +320,10 @@
         #viewer { z-index:1; }
         #preloadContainer { z-index:2; opacity:0; background-color:rgba(255,255,255,1); transition: opacity 0.5s; -webkit-transition: opacity 0.5s; -moz-transition: opacity 0.5s; -o-transition: opacity 0.5s;}
     </style>
-    
+    <link rel="stylesheet" href="fonts.css?v=1680096827168">
 </head>
 <body>
-    <div id="preloadContainer" class="fill-viewport"><div style="z-index: 4; position: absolute; overflow: hidden; left: 0%; top: 50%; width: 100.00%; height: 10.00%" ><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;font-size:1.6666666666666665vmin;"><SPAN STYLE="display:inline-block; letter-spacing:0vmin; white-space:pre-wrap;color:#777777;font-size:1.67vmin;font-family:Arial, Helvetica, sans-serif;">Loading virtual tour. Please wait...</SPAN></DIV></div></div></div>
+    <div id="preloadContainer" class="fill-viewport"><div style="z-index: 4; position: absolute; overflow: hidden; left: 0%; top: 50%; width: 100.00%; height: 10.00%" ><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;font-size:1.6666666666666663vmin;"><SPAN STYLE="display:inline-block; letter-spacing:0vmin; white-space:pre-wrap;color:#777777;font-size:1.67vmin;font-family:Arial, Helvetica, sans-serif;">Loading virtual tour. Please wait...</SPAN></DIV></div></div></div>
     <div id="viewer" class="fill-viewport"></div>
 </body>
 </html>
